Require JDK 17, fix modules for tests